# CelShader

./: CMakeCache.txt  CMakeLists.txt  CelShader  Makefile  README.md  cmake_install.cmake  default.frag  default.vert  main.cpp  mesh_manager.hpp  shader_manager.cpp
include/: camera.hpp  shader_manager.hpp  texture_manager.hpp
lib/: CMakeLists.txt
lib/SOIL/: CMakeLists.txt
shaders/: contour.frag  contour.vert  default.vert  stylized.frag  stylized.vert  toon.frag  toon.vert  xtoon.frag  xtoon.vert  xtoon_depth.frag  xtoon_depth.vert
src/: CMakeLists.txt  camera.cpp  main.cpp  mesh_manager.cpp  texture_manager.cpp
